Updated README.md for V2 & Fixed issue where search icon was not visible in dark theme

--- a/src/scss/components/_search.scss
+++ b/src/scss/components/_search.scss
@@ -50,6 +50,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
+    &--dark {
+      color: $color-gray-1;
+    }
+
     &:hover {
       transition: transform 0.3s;
       transform: scale(1.3) translate(-50%, -50%);
